--- a/index.html
+++ b/index.html
@@ -2,103 +2,151 @@
 <html>
 
 <head>
-	<title>Ada Lovelace</title>
+	<title>CV Karin de Oliveira</title>
   <link href="css/style.css" rel="stylesheet">
   <link rel="shortcut icon" href="ada/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
-	<h1>Mulheres que fizeram história na tecnologia</h1>
+	<h1>Karin de Oliveira</h1>
    <nav class="principal">
      <ul>
         <li>
-        <a href="#infancia">Infância</a>
+        <a href="#Formação"> Formação</a>
         </li>
         <li>
-        <a href="#juventude">Juventude</a>
+        <a href="#Histórico">Histórico</a>
         </li>
         <li>
-        <a href="#vida">Vida Adulta</a>
+        <a href="#Cursos">Cursos</a>
+        </li>
+        <li>
+        <a href="#Badges">Badges</a>
         </li>
      </ul>
    </nav>
+
 <section>
-    <h2>Ada Lovelace</h2>
-    <p>Augusta Ada King, condessa de Lovelace, nasceu em Londres em 1815, mais conhecida como Ada Lovelace, foi a primeira pessoa
-      a escrever um algoritmo para ser processado por uma máquina na história da computação.</p>
+    <h2>Resumo Profissional</h2>
+    <p> Faço Análise e desenvolvimento de sistemas na Universidade Estácio de Sá. Na Petrobras Distribuidora, atuei na área de segurança do trabalho. Tenho conhecimentos com mobile em Low Code, JAVA, Front - End, Agile, Design Thinking,gestão de projetos, Python, HTML, CSS, Javascript, C, programação web, sites em Wordpress, programação para celulares, edição de vídeos, gestão de redes sociais.</p>
 
-    <img src="ada/adaPintura.png" alt="Pintura colorida da Ada">
-      <section id="infancia">
-        <h3 class="titulo-verde">Infância</h3>
-        <p>Seu pai era o poeta romântico Lord Byron, conhecido por seus exageros como ter um urso domesticado em seu quarto e por atos (incomuns para a época), como se relacionar com homens e mulheres. Sua mãe era a rica e culta Annabella Milbanke, apaixonada por matemática e pouco paciente com as maluquices do marido.</p>
 
-        <p>Lord Byron bebia demais o que resultou no divórcio quando Ada tinha só 5 semanas de vida. Annabella foi mãe solo preocupada em garantir que Ada não ficasse parecida com o pai. Investiu na educação rigorosa da menina contratando os melhores professores. Acreditava que, se a filha se interessasse por matemática e ciências, se afastaria da poesia e das tendências excêntricas herdadas do pai.<p>
+    <br>
+      <section id="Formação">
+        <h3 class="titulo-verde">Formação Profissional</h3>
+        <p>Bacharelado em análise e desenvolvimento de sistemas –Universidade Estácio de Sá março/2020 à atualmente</p>
 
-        <p>Ada era fascinada por matemática e poesia (para desespero de sua mãe). Aos doze anos, encantou-se pela engenharia mecânica e escreveu um livro chamado Flyology (ou Voologia), com desenhos de um plano para a construção de uma máquina de voar. Ao contar para sua mãe sobre a máquina, Annabelle achou que Ada estava se desviando dos estudos e a reprimiu. Então, pediu para que Ada focasse em se tornar uma dama.</p>
+        <p>Bacharelado em ciências biológicas – modalidade ecologia - Universidade Federal do Rio de Janeiro (UFRJ) agosto/2008 a abril/2013<p>
 
-        <img src="ada/adaCrianca.png" alt="Pintura de Ada criança segurando um desenho.">
+        <p>Técnico em segurança do trabalho - Universidade Estácio de Sá – UNESA maio/2014 a outubro/2015</p>
+
+        <p>English Exchange Program Stafford house London Outubro/2019</p>
+
+        <!--<img src="ada/adaCrianca.png" alt="Pintura de Ada criança segurando um desenho.">-->
       </section>
-      <section id="juventude">
-        <h3 class="titulo-vermelho">Juventude</h3>
-        <p>Aos 17 anos, Ada foi apresentada à corte e passou a ser convidada para festas na cidade. Seu jeito inteligente e rápida atraiu muitos solteiros, mas ela se interessou por um velho matemático chamado Charles Babage, que lhe contou sobre a invenção que trabalhava há anos, a “máquina diferencial”, que fazia grandes cálculos.</p>
+      <section id="Histórico">
+        <h3 class="titulo-vermelho">Histórico</h3>
+        <p>Aquário Marinho do Rio de Janeiro - Técnica Educadora – Outubro/2016 à Abril/2020
+Atividades desempenhadas: Coordenação da operação do circuito de exposição, elaboração de escalas de trabalho, de conteúdos e de projetos educativo; criação e implementação de projeto educacional em acessibilidade, educação ambiental para pessoas de diversas nacionalidades e faixas etárias. Integrante da Brigada voluntária de Incêndio: realização de inspeção, elaboração de formulários e checklists,atuante na conscientização em segurança do trabalho, palestrante. Vice-presidente da CIPA: elaboração dos mapas de riscos, organização da SIPAT, elaboração de campanhas educativas e relatórios, participações em reuniões. Principais resultados: Tornei o AquaRio acessível para pessoas com deficiência visual e comunidade Surda; Treinei todos os educadores do AquaRio e do BioParque do Rio com noções de audiodescrição e acessibilidade atitudinal; promoção de eventos inclusivos; possibilitei a promoção de melhorias na área de SST com relatórios.</p>
 
-        <p>Charles gostou da jovem, ela era uma das poucas pessoas que se interessou e entendeu suas invenções. Quando Ada conheceu a máquina diferencial, viu nela muitas possibilidades que nem mesmo Charles havia pensado. O entusiasmo da jovem matemática o impressionava.</p>
+        <p>Petrobras Distribuidora - Estagiária de segurança do trabalho - Fevereiro/2015 a Março/2016
+Atividades desempenhadas: Confecção de permissões de trabalho (análise global dos riscos à saúde do colaborador inerentes à realização dos trabalhos relacionados às NR 20,10, 12,33,35, dentre outras), controle e distribuição de equipamentos de proteção individual e de fichas de informação de segurança de produtos químicos (FISPQ), monitoramento atmosférico com multigás em espaço confinado e área industrial, inspeções diversas como em equipamentos de emergência, em área e NR 24, realização de treinamentos e diálogos diários de segurança, participação no processo de CIPA e em simulados de emergência; integrante da brigada voluntária de incêndio e dentre outras experiências em segurança do trabalho e em meio ambiente no setor de SMS em uma gerência de combustíveis de aviação da Petrobras Distribuidora do Aeroporto do Galeão. Principais resultados: Através de relatórios minunciosos, evitei que a empresa fosse autuada, assim não gerando multas desnecessárias e mantendo a saúde financeira da Petrobras.</p>
       </section>
-      <section id="vida"> 
-        <h3 class="titulo-amarelo">Vida adulta</h3>
-        <p>Charles era viúvo e lutava por investimentos para os seus projetos. Ada se casou e teve 3 filhos. Em 1830, isso significava que ela deveria abandonar os estudos e se dedicar aos filhos. Trocava cartas com Charles, acompanhava o trabalho dele de longe. Tinha pouco tempo para os próprios estudos. Passou a resolver problemas matemáticos à noite, após as crianças dormirem. Ela queria era trabalhar com Charles em suas máquinas incríveis.</p>
+      <section id="Cursos"> 
+        <h3 class="titulo-amarelo">Cursos</h3>
+        <li>SAP, Microsoft Project: Nível básico.
+        </li>
+        <li>
+        Microsoft Excel, Javascript, HTML, CSS, C, Python: Nível Intermediário.
+        </li>
+        <li>Internet, e-mail, Microsoft Word e Power Point: Nível avançado.
+        </li>
+        <li>HTML e CSS Básico (8 HORAS)
+        </li>        
+        <li> Biblioteca BOOTSTRAP (2 HORAS)
+        </li>
+        <li> Javascript Básico (8 horas)
+        </li>
+        <li> Programação WEB – IFRJ – 200 HORAS
+        </li>
+        <li> Programação Dispositivos Móveis – IFRJ – 200 HORAS
+        </li>    
+        <li> Front – End – Programaria – 25 HORAS
+        </li>
+        <li>
+        Curso de Auditor Interno de Gestão Integrado – BUREAU VERITAS - 24 HORAS
+        </li>        
+        <li> Microsoft Excel – Trabalhando com macros e VBA – GRUPO CATARATAS
+        </li>
+        <li>  Java Completo (50 horas)
+        </li>
+        <li> Microserviços em Java e SpringBoot
+        </li>
+        <li> Programando Rest API em Java        </li> 
+         <li> Git e Git hub essencial
+        <li> Testes unitários        </li>
+        <li> Teste de integração        </li>
+        <li> Banco de dados        </li> 
 
-        <p>Tempos depois, Charles criou o Engenho Analítico, melhor do que a máquina diferencial, pois seria capaz de analisar dados e guardar informações na memória. Algo tão revolucionário que poucas pessoas entenderam. Para divulgar sua nova máquina, precisaria publicar artigos em francês, língua que ele não sabia, mas Ada era fluente. Como ela entendia as criações de Charles, era a pessoa perfeita para traduzir esses artigos.</p>
+        
 
-        <p>Enquanto Ada traduzia o conteúdo, fazia anotações por conta própria, imaginava inúmeras possibilidades que a máquina teria. Não tardou para que suas anotações ficassem maiores do que o próprio artigo.</p>
-
-        <p>Charles queria que a máquina resolvesse problemas matemáticos. Ada pensava em algo muito maior: os números poderiam representar coisas totalmente diferentes como letras e notas musicais. Escreveu instruções detalhadas com diagramas e tabelas explicando como o engenho analítico deveria processar uma equação matemática complicada. Assim, a máquina resolveria em segundos o que um humano levaria horas para solucionar. Os computadores ainda não existiam, mas Ada tinha acabado de criar o primeiro programa de computador. Ada não viveu para ver que suas ideias se transformariam nos computadores modernos que usamos hoje.</p>
-
-        <img src="ada/adaTabela.png" alt="Pintura de Ada jovem ao lado de uma tabela com algoritmos.">
+        
       </section>
 
-      </section>
-
-      <h3>Conheça outras mulheres que fizeram história na tecnologia:</h3>
+       <section id="Badges">
+        <h3 class="titulo-vermelho">Badges</h3>
 
       <nav>
         <ul>
           <li>
-            <a href="https://pt.wikipedia.org/wiki/Grace_Hopper" target="_blank"> Grace Hopper
+            <a href="" target="_blank"> Think like a Hacker
             </a>
           </li>
 
           <li>
-            <a href="https://pt.wikipedia.org/wiki/Dorothy_Vaughan" target="_blank">
-            Dorothy Vaughan
+            <a href="" target="_blank">
+            Cloud Core
             </a>
           </li>
 
           <li>
-            <a href="https://pt.wikipedia.org/wiki/Margaret_Hamilton_(cientista_da_computa%C3%A7%C3%A3o)" target="_blank">
-            Margareth Hamilton
+            <a href="" target="_blank">
+            Agile explorer
             </a>
           </li>
 
           <li>
-            <a href="https://pt.wikipedia.org/wiki/Katherine_Johnson" target="_blank">
-            Katherine Johnson
+            <a href="" target="_blank">
+            Design Thinking Practioner
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+            Financial
             </a>
           </li>
         </ul>
       </nav>
-      <h4> Quer saber mais sobre outras mulheres que fizeram história na programação? deixe seu email!</h4>
-      <form>
-        <label for="nome">Nome:</label>
-        <input id="nome" type="text">
-         <label for="email">E-mail:</label>
-        <input id= "email" type="email">
-        <label for="telefone">Telefone</label>
-        <input id="telefone" type="number">
-        <button id="botaoEnviar">Enviar</button>
-      </form>
-    <script type="text/javascript" src="js/script.js"></script>
-    </body>
+     <div class="linguagem">
+  <div class="coluna">
+    <img align="center" alt="CSS" height="30" width="40" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
+  </div>
+  <div class="coluna">
+  <img align="center" alt="VS Code" height="30" width="40" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/vscode/vscode-original.svg">
+  </div>
+  <div class="coluna">
+  <img align="center" alt="Git" height="30" width="40" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg">
+  </div>
+  <div class="coluna">
+  <img align="center" alt="HTML" height="30" width="40" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
+  </div>
+  <div class="coluna">
+  <img align="center" alt="Java" height="30" width="40" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-original.svg">
+  </div>
+  <div class="coluna">
+  <img align="center" alt="Python" height="30" width="40" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
+  </div>  
+</div>
 
 
   </html>
